Fix: Unnecessary scrollbar on chromium browsers
On Firefox the scrollbar is transparent, which is not a problem, but on edge it's a huge white scroll

--- a/css/rainbow/tomorrow-night.css
+++ b/css/rainbow/tomorrow-night.css
@@ -3,13 +3,12 @@ pre {
     padding: 10px 20px;
     border-radius: 0 0 10px 10px;
     max-width: 90vw;
-    overflow-x: scroll;
-    scrollbar-color: transparent;
+    overflow-x: auto;
 }
 
-pre code, pre code span {
+/* pre code, pre code span {
     font-family: 'Verdana', sans-serif;
-}
+} */
 
 pre .comment {
     color: #969896
